@@ -26,6 +26,7 @@ Version 6.0.4 - not yet released
   - device: support NMEA over Bluetooth RFCOMM
   - more pause/resume crash fixes
   - don't process hardware keys twice
+  - fix bitmap loading on Android 2.3
 
 Version 6.0.3 - 2011/02/02
 * devices
